kube/base/storefront/storefront-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storefront
  template:
    metadata:
        labels:
          app: storefront
    spec:
      restartPolicy: Always
      containers:
        - name: storefront
          image: k3d-higiliqs.local:12345/saleor-storefront:0.1.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "10m"
              memory: "128M"
            limits:
              cpu: "1000m"
              memory: "512M"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 90
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 10
          ports:
              - containerPort: 3000
