kube/base/storefront/storefront-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: storefront-external
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: storefront
