kube/base/storefront/storefront-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storefront-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: store.higiliquidos.deti.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storefront-external
                port:
                  number: 80
